--- a/Dokumentation/Enddokumentation/Anhang/BerechnungenSchwungradantrieb.tex
+++ b/Dokumentation/Enddokumentation/Anhang/BerechnungenSchwungradantrieb.tex
@@ -1,7 +1,7 @@
 \subsubsection{Auslegung Schwungradantrieb}
 \label{BestimmungDrehmomentSchwundrad}
 Um den Schwungradantrieb auslegen zu können werden Nenndrehzahl und Nenndrehmoment 
-benötigt. Diese werden nachfolgende anhand zwei unterschiedlichen Ansätzen berechnet.
+benötigt. Diese werden nachfolgend anhand zwei unterschiedlichen Ansätzen berechnet.
 Der eine Ansatz ist über das Quetschen des Balles und der Andere ist über die 
 Energieerhaltung.
 %
