--- a/Dokumentation/Enddokumentation/Loesungskonzept/Stelleinheit.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Stelleinheit.tex
@@ -1,6 +1,6 @@
 \subsubsection{Horizontale Ausrichteinheit} %\subsubsection{Stelleinheit}
 Um die Abwurfeinheit zum Ziel auszurichten, wird ein verstellbarer Mechanismus benötigt, der eine hohe Genauigkeit aufweist. Der Drehpunkt muss sich möglichst unter den Schwungrädern befinden, damit die 
-Position des Abwurfes im Zentrum des Spielfeldes bleibt. Die Drehung wird mit einen Schrittmotor
+Position des Abwurfes im Zentrum des Spielfeldes bleibt. Die Drehung wird mit einem Schrittmotor
 realisiert. Ein Schrittmotor bietet sich hier an, da somit eine sehr exakte Ansteuerung gewährleistet
 wird. Dadurch kann der Verstellwinkel, welcher von der Position des Zieles abhängt, genau eingestellt
 werden. Der Schrittmotor wird in der Abwurfeinheit angebracht und treibt ein Ritzel an, welches in
