--- a/Dokumentation/Enddokumentation/Projektplanung_Management/Zeit.tex
+++ b/Dokumentation/Enddokumentation/Projektplanung_Management/Zeit.tex
@@ -28,21 +28,17 @@ PREN-Moduls laufen, werden Ende PREN 1 in eine neue Projektplanung für PREN 2
 %
 \subsubsection{Soll/Ist Zeitvergleich}
 Die Zeiten welche in der Projektplanung angegeben sind, sind als Schätzungen 
-zu betrachten. Sie wurden jeweils zu Beginn des Arbeitsblockes durch die 
-Verantwortliche Person gemacht. Arbeitszeitrapporte oder Stundenblätter wurden 
-nicht geführt dadurch kann die effektiv an einem Arbeitsblock gearbeitete Zeit 
+zu betrachten, welche jeweils zu Beginn des Arbeitsblockes durch die 
+verantwortliche Person gemacht wurde. Arbeitszeitrapporte oder Stundenblätter wurden 
+nicht geführt. Dadurch kann die effektiv an einem Arbeitsblock gearbeitete Zeit 
 abweichen. Vor allem den Administrativen Arbeiten und dem Dokumentieren wurde 
 zu wenig Zeit zugesprochen. Dies zeigte sich jeweils beim Abschluss eines 
 solchen Teilbereichs. Layout, Korrekturlesen, Änderungen etc. brauchten im 
 Endeffekt fast immer mehr Zeit als veranschlagt. Dies ist ein wichtiger Punkt 
 den es in der Zeitplanung im Hinblick auf PREN 2 zu beachten gilt. Die grösste 
-Abweichung von der Planung gibt es sicher bei der Dokumentation. Hier wurde 
+Abweichung von der Planung gibt es sicherlich bei der Dokumentation. Hier wurde 
 der Aufwand deutlich unterschätzt. Mit allen Formatierungs- und Layoutarbeiten 
-ist schlussendlich sicher die doppelte Zeit dafür aufgewendet worden. Andere 
+ist schlussendlich zirka die doppelte Zeit dafür aufgewendet worden. Andere 
 Arbeiten wie z.B. die Testversuche konnten gut im dafür vorgesehenen Zeitrahmen 
 abgeschlossen werden. Über alles gesehen wird der Aufwand um ca. einen Viertel 
-grösser sein als die Schätzung. Dies hängt hauptsächlich mit dem grösseren 
-Aufwand für die Dokumentierarbeiten und die ganze Morphologie zusammen. Für 
-PREN 2 werden konservativere Schätzungen vorgenommen und zudem hat jedes 
-Teammitglied über den jeweiligen Arbeitsaufwand Buch zu führen. Dies lässt 
-bessere und genauere Rückschlüsse für weitere Projekte zu. 
+grösser sein als die Schätzung. In PREN 2 wird voraussichtlich jedes Teammitglied über seinen Arbeitsaufwand Buch führen, was eine genauere Kontrolle ermöglicht. Zudem ist geplant, vor allem dem Dokumentieren beim Schätzen mehr Pufferzeit zuzusprechen.
