--- a/Dokumentation/Enddokumentation/Schluss/Ausblick.tex
+++ b/Dokumentation/Enddokumentation/Schluss/Ausblick.tex
@@ -2,7 +2,7 @@
 Im nächsten Semester wird das erarbeitete Konzept realisiert. Aus administrativer 
 Sicht muss vermehrt und besser zu Beginn einer jeden Meilensteinphase abgesprochen 
 werden, welche Dokumente mit welchem spezifischen Inhalt erstellt werden müssen. 
-Während dem PREN 1 Modul musste jedes Mal vor einem Meilenstein ein Grosszahl der 
+Während PREN 1 musste jedes Mal vor einem Meilenstein ein Grossteil der 
 Dokumente überarbeitet oder gar neu erstellt werden, weil sich zeigte, dass der 
 Inhalt nicht dem Geforderten entsprach.\\
 \\
@@ -11,8 +11,7 @@ das Zuführen der Bälle zu den Schwungräder mittels Leitblech müssen noch kon
 werden. Das Gewicht der Abwurfeinheit soll zudem weiter optimiert werden, um das 
 Gewichtslimit einzuhalten. Um die einzelnen Bauteile fertigen zu können, müssen 
 zunächst die CAD\footnote{\textbf{C}omputer-\textbf{A}ided \textbf{D}esign} 
-Zeichnungen erstellt werden. Des Weiteren muss die Software 
-entwickelt werden. Es wurden bereits Tests zur Bluetooth-Kommunikation, der 
+Zeichnungen erstellt werden. Des Weiteren muss der Software-Prototyp weiterentwickelt werden. Es wurden bereits Tests zur Bluetooth-Kommunikation, der 
 Objekterkennung und der Kommunikation zwischen Controller und Smartphone 
 durchgeführt. Diese einzelnen Komponenten müssen jedoch in einer homogenen 
 Smartphone-App integriert werden. Zu Test- und Demonstrationszwecken soll ausserdem 
