--- a/Dokumentation/Enddokumentation/Schluss/Rueckblick.tex
+++ b/Dokumentation/Enddokumentation/Schluss/Rueckblick.tex
@@ -1,17 +1,17 @@
 \subsection{Rückblick}
-Eine wichtige Erkenntnis wurde im PREN 1 Modul bezüglich kollaboratives Arbeiten 
+Eine wichtige Erkenntnis wurde in PREN 1 bezüglich kollaboratives Arbeiten 
 gewonnen. Der Austausch aller Dateien fand via Dropbox statt. Dieses Modell zeigte 
 jedoch mit der Zeit Schwächen, vor allem bezüglich des gemeinsamen editierens eines 
-Dokuments. Es wäre daher eine Diskussion wert, die Dokumente welche von mehreren 
+Dokuments. Es wäre daher eine Diskussion wert, diejenigen Dokumente, welche von mehreren 
 Teammitgliedern bearbeitet werden auf eine Plattform für kollaboratives Arbeiten 
-(z.B. Google Drive) auszulagern und die Dropbox als reinen Dateienaustausch 
+(z.B. Google Drive) auszulagern und die Dropbox als reinen Datenaustausch 
 beizubehalten.\\
 \\
 Wir haben bewusst eine flache Teamhierarchie gewählt und managen unser Projekt 
 so, dass jedes Teammitglied die Verantwortung für einen festgelegten Bereich 
-erhält. Generelle Diskussionen zu Projektmanagement-Themen werden im Plenum 
-besprochen und allfällige Entscheide gegebenenfalls gefällt. Bis zum jetzigen 
-Zeitpunkt funktioniert diese Art der Zusammenarbeit ohne grössere Probleme und 
+erhält. Generelle Diskussionen zu Projektmanagement-Themen, sowie grundlegende Entscheidungen werden im Plenum 
+besprochen. Bis zum jetzigen 
+Zeitpunkt funktioniert diese Art der Zusammenarbeit ohne grössere Probleme oder 
 Reibereien. Es hat sich gezeigt, dass man in Diskussionen rasch vom eigentlichen 
 Thema abweicht oder nicht mehr zielgerichtet diskutiert. Alle Teammitglieder 
 sollten vermehrt darauf bedacht sein, themenbezogen und effizient an einer Lösung 
