--- a/Dokumentation/Enddokumentation/Schluss/Schluss.tex
+++ b/Dokumentation/Enddokumentation/Schluss/Schluss.tex
@@ -7,7 +7,7 @@ Bei der Schaffung der Grobkonzepte mussten einige Grundprobleme angegangen werde
 festgelegt, dass ein statischer Werfer konstruiert wird, welcher sich nicht von der Startposition 
 wegbewegt. Dies, da sich bei der Verwendung eines Fahrwerks lediglich neue Problemfelder wie 
 Rückstoss oder Bestimmung der Eigenposition auftun. Die Verwendung eines Smartphones bot sich 
-an, weil dadurch Drahtlos-Adapter, Rechenkapazität und Kamera in einer Komponente zur Verfügung 
+an, weil dadurch Drahtlos-Adapter, Rechenkapazität und Kamera in einer einzigen Komponente zur Verfügung 
 stehen. \\
 \\
 Dieses grobe erste Konzept wurde weiter ausgearbeitet und daraus ein Feinkonzept geschaffen, 
@@ -16,14 +16,14 @@ mit einer eigens entwickelten Smartphone-App realisiert. Zum Abwurf der Bälle s
 Schwungräder dienen, wobei die Zuführung der Bälle über ein Förderband 
 geschieht. \\
 \\
-Die Elektrotechnik Studierenden haben sich zu einer ET-Gruppe zusammengeschlossen, um 
+Die Elektrotechnik Studierenden haben sich zu einer Gruppe zusammengeschlossen, um 
 teamübergreifend gemeinsame Probleme zu lösen. Dies hat sich dahingehend ausgezahlt, dass 
 der Brushless Ansteuerungstest mit dem FPGA mit weniger Aufwand als mit einer diskreten Schaltung 
 aufgebaut werden konnte. Weiter gibt es Probleme, wie die Stepper-Ansteuerung, die von einer anderen 
-Gruppe erarbeitet wird. Somit kann man sich auf andere Probleme konzentrieren. Ein weiterer wichtiger 
-Aspekt dieser Zusammenarbeit ist, dass realitätsnah eine teamübergeordnete Kollaboration geübt werden 
+Gruppe erarbeitet wird. Ein weiterer wichtiger 
+Aspekt dieser Zusammenarbeit ist, dass realitätsnah eine übergeordnete Kollaboration geübt werden 
 kann.\\
 \\
-Insgesamt wurde ein umfassendes Konzept geschaffen, welches die gesetzten Ziele und 
+Insgesamt wurde somit ein Konzept geschaffen, welches die gesetzten Ziele und 
 Rahmenbedingungen erfüllt und den sofortigen Beginn der Umsetzung Anfang nächstes Semester 
-gewährleistet.
+ermöglicht.
